hphp/test/zend/bad/Zend/tests/generators/yield_during_function_call.php
<?php

function gen() {
	var_dump(str_repeat("x", yield));
}

$gen = gen();
$gen->send(10);

?>